<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/image_slider_layout"
        android:background="@color/black"
        android:layout_width="fill_parent"
        android:layout_height="360dp">
        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true" />
        <TextView
            android:layout_marginStart="23dp"
            android:layout_marginBottom="120dp"
            android:layout_alignBottom="@+id/pager"
            android:text="@string/next_station"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_alignBottom="@+id/pager"
            android:layout_marginStart="23dp"
            android:layout_marginBottom="60dp"
            android:id="@+id/destination_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/next_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="시청"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/info_controller_layout"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:id="@+id/history"
                android:orientation="vertical"
                android:layout_width="90dp"
                android:layout_height="90dp">
                <ImageView
                    android:src="@drawable/ic_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/related_history"
                    android:textSize="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:id="@+id/attractions"
                android:orientation="vertical"
                android:layout_width="90dp"
                android:layout_height="90dp">
                <ImageView
                    android:src="@drawable/ic_attractions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/attraction"
                    android:textSize="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:id="@+id/restaurant"
                android:orientation="vertical"
                android:layout_width="90dp"
                android:layout_height="90dp">
                <ImageView
                    android:src="@drawable/ic_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/restaurant"
                    android:textSize="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:id="@+id/enjoy"
                android:orientation="vertical"
                android:layout_width="90dp"
                android:layout_height="90dp">
                <ImageView
                    android:src="@drawable/ic_enjoy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/enjoy"
                    android:textSize="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>